# bmt_fastapi

./: .gitignore
backend/: Dockerfile  entrypoint.sh  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0030d46fd679_username_field_set_is_required_in_users_.py  00af18cbf4f6_rename_specification_to_specifications_.py  0865cffd25ed_add_max_length_constraint_to_code_field_.py  182d9c1e2cf8_change_precision_to_value_field_in_.py  22b02493ab95_add_user_model.py  2a557bf38e62_add_uniqueconstraint_name_category_id_.py  33270eb6bf20_add_lazy_selectin_to_parent_children_.py  345f8ca1041d_add_max_length_to_comment_field_in_.py  491d59ad1f39_remove_role_field_in_user_model.py  54bff2f5ed21_add_check_coupon_used_count_limit_.py  5549b6bc15fe_old_price_field_now_is_not_required_in_.py  5746165dd3a8_add_restrict_foreign_key_to_prevent_.py  6c4d56844775_add_order_model_and_relationship_to_.py  7ade6842801f_rename_specification_to_specifications_.py  7f0d24b9d590_add_product_model.py  845758059df4_add_product_image_and_product_.py  93314dc66eaa_add_coupon_model.py  98bc8ff652a9_create_productspecification_model_add_.py  9de0dd2f4441_change_max_lenghth_to_512_value_field_.py  a426dd8081fd_add_lazy_selectin_to_products_in_.py  a6f5b8460158_add_cart_model.py  bbe4b473a60f_add_relationship_products_in_category_.py  cd4c5f5723be_add_orderitem_model_and_items_.py  df53dbd93b72_add_max_length_to_file_key_field_in_.py  df6c4a0fb87f_add_original_filename_content_type_file_.py  e05bbdd3b02f_add_review_model_and_set_relationship_.py  e24550e4574c_add_coupon_id_and_discount_amount_to_.py  ed18afa3bf96_change_user_id_foreignkey_to_user_.py  fcfb8b83536c_add_coupon_id_to_cart.py
backend/app/: main.py
backend/app/api/v1/: routers.py
backend/app/core/: config.py  constants.py  decorators.py  exceptions.py  logger.py
backend/app/db/: mixins.py  models.py  session.py
backend/app/middlewares/: latency.py  request_id.py
backend/app/modules/auth/: backends.py  dependencies.py  managers.py  providers.py
backend/app/modules/cart_items/: dependencies.py  models.py  repositories.py  schemas.py
backend/app/modules/carts/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
backend/app/services/: base_service.py  minio.py
(+106 files in other folders)
