[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "cffi==2.0.0",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.136.0",
    "fastapi-slim==0.129.1",
    "fastapi-users==15.0.5",
    "fastapi-users-db-sqlalchemy==7.0.0",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "idna==3.11",
    "makefun==1.16.0",
    "mako==1.3.11",
    "markupsafe==3.0.3",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.13.2",
    "pydantic-core==2.46.2",
    "pydantic-settings==2.13.1",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
