[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-slim>=0.129.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
